cmake_minimum_required(VERSION 3.2)
project(calibration)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
message(STATUS "AAAAAAAAAAAAAAAAAA")
message(STATUS ${CMAKE_MODULE_PATH})
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
#ADD_COMPILE_OPTIONS(-std=c++14 )
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(lib)
add_subdirectory(app)